k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aibootcamp-app-ingress
  namespace: weixu
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aicamp.iiis.co
    secretName: aicamp-letsencrypt-tls
  rules:
  - host: aicamp.iiis.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aibootcamp-app-service
            port:
              number: 7780
